Added the Tableau link to the rmd file

--- a/Showcase Projects/NFL_combine/NFL_Combine.html
+++ b/Showcase Projects/NFL_combine/NFL_Combine.html
@@ -1580,10 +1580,11 @@ border-radius: 0px;
 </div>
 
 
-<div id="background" class="section level2">
-<h2>Background</h2>
-<p>Use this week to finish your semester project. If you have been
-working on it all along then this should not be hard.</p>
+<div id="tableau" class="section level2">
+<h2>Tableau</h2>
+<p>I have created a Tableau dashboard to go along with the data set
+created in this r file. It can be acessed using the link below</p>
+<p><a href="https://public.tableau.com/views/NFLCombineDraftData/DemographicInformation" class="uri">https://public.tableau.com/views/NFLCombineDraftData/DemographicInformation</a>?:language=en-US&amp;:display_count=n&amp;:origin=viz_share_link</p>
 </div>
 <div id="links-to-my-data" class="section level2">
 <h2>Links to My Data</h2>
