Updated some of the wording in the conclusion

--- a/Showcase Projects/NFL_combine/NFL_Combine.html
+++ b/Showcase Projects/NFL_combine/NFL_Combine.html
@@ -1583,7 +1583,7 @@ border-radius: 0px;
 <div id="tableau" class="section level2">
 <h2>Tableau</h2>
 <p>I have created a Tableau dashboard to go along with the data set
-created in this r file. It can be acessed using the link below</p>
+created in this r file. It can be accessed using the link below</p>
 <p><a href="https://public.tableau.com/views/NFLCombineDraftData/DemographicInformation" class="uri">https://public.tableau.com/views/NFLCombineDraftData/DemographicInformation</a>?:language=en-US&amp;:display_count=n&amp;:origin=viz_share_link</p>
 </div>
 <div id="links-to-my-data" class="section level2">
@@ -1794,15 +1794,15 @@ all_gm_avg %&gt;%
 </div>
 <div id="conclusion-1" class="section level3">
 <h3>Conclusion</h3>
-<p>The model shown above is shows how much your odds will increase based
-on an increase of 1 for each of the those values. So for example, if you
+<p>The model shown above shows how much your odds will increase based on
+an increase of 1 for each of the those values. So for example, if you
 were to increase your bench press by 1, you increase your odds of
 getting drafted by 0.06. The graph above shows the line of best fit for
 the weight variable when all of the other factors are set to the
 average. As you can see their is sharp increase starting around 133kg
 and ending about 143kg. If you are an offensive linemen then you want to
 be above 143kg or 315lb to have the best shot of getting drafted.</p>
-<p>There are obviously other factors that this time of measurement does
+<p>There are obviously other factors that this type of measurement does
 not take into account. This model was strictly based on data collected
 during the combine and does not factor in any stats that might have been
 gathered during a season. It also does not take into count skill level
